--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.7",
+    "bootstrap-vue-next": "^0.30.5",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.7",
     "vue": "^3.4.38"
   },
   "devDependencies": {
