--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "bootstrap-vue-next": "^0.30.5",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
